script improvcements